--- a/hack/release.toml
+++ b/hack/release.toml
@@ -6,7 +6,7 @@ github_repo = "siderolabs/talos"
 match_deps = "^github.com/((talos-systems|siderolabs)/[a-zA-Z0-9-]+)$"
 
 # previous release
-previous = "v1.7.4"
+previous = "v1.7.5"
 
 pre_release = false
 
@@ -17,11 +17,10 @@ preface = """\
     [notes.updates]
         title = "Component Updates"
         description = """\
-Linux: 6.6.33
-Flannel: 0.25.3
-Containerd: 1.7.18
+Linux: 6.6.43
+Kubernetes: 1.30.3
 
-Talos is built with Go 1.22.4.
+Talos is built with Go 1.22.5.
 """
 
 
