--- a/hack/release.toml
+++ b/hack/release.toml
@@ -17,8 +17,8 @@ preface = """\
     [notes.updates]
         title = "Component Updates"
         description = """\
-Kubernetes: 1.31.0-beta0
-Linux: 6.6.43
+Kubernetes: 1.31.0-rc.1
+Linux: 6.6.44
 containerd: 2.0.0-rc.3
 runc: 1.2.0-rc.2
 etcd: 3.5.15
@@ -26,7 +26,7 @@ Flannel: 0.25.5
 Flannel CNI plugin: 1.5.1
 CoreDNS: 1.1.13
 
-Talos is built with Go 1.22.5.
+Talos is built with Go 1.22.6.
 """
 
     [notes.apparmor]
