--- a/hack/release.toml
+++ b/hack/release.toml
@@ -174,6 +174,12 @@ Talos Linux now bundles by default the following standard CNI plugins:
 The Talos bundled Flannel manifest was simplified to remove the `install-cni` step.
 """
 
+    [notes.udevd]
+        title = "Device Extra Settle Timeout"
+        description = """\
+Talos Linux now supports a kernel command line argument `talos.device.settle_time=3m` to set the device extra settle timeout to workaround issues with broken drivers.
+"""
+
 [make_deps]
 
     [make_deps.tools]
