--- a/hack/release.toml
+++ b/hack/release.toml
@@ -18,7 +18,7 @@ preface = """\
     [notes.updates]
         title = "Component Updates"
         description = """\
-Kubernetes: 1.31.0-rc.1
+Kubernetes: 1.31.0
 Linux: 6.6.45
 containerd: 2.0.0-rc.3
 runc: 1.2.0-rc.2
