--- a/.github/workflows/integration-qemu-csi-longhorn-cron.yaml
+++ b/.github/workflows/integration-qemu-csi-longhorn-cron.yaml
@@ -1,8 +1,8 @@
 # THIS FILE WAS AUTOMATICALLY GENERATED, PLEASE DO NOT EDIT.
 #
-# Generated on 2024-05-27T16:20:10Z by kres bcb280a.
+# Generated on 2024-08-24T17:38:15Z by kres 8e4bbb4.
 
-name: integration-qemu-csi-cron
+name: integration-qemu-csi-longhorn-cron
 concurrency:
   group: ${{ github.head_ref || github.run_id }}
   cancel-in-progress: true
@@ -74,23 +74,42 @@ jobs:
         if: github.event_name == 'schedule'
         run: |
           make talosctl-cni-bundle
-      - name: e2e-qemu-csi
+      - name: checkout extensions
+        uses: actions/checkout@v4
+        with:
+          path: _out/extensions
+          ref: main
+          repository: siderolabs/extensions
+      - name: set variables
+        run: |
+          cat _out/talos-metadata >> "$GITHUB_ENV"
+      - name: build extensions
         env:
+          PLATFORM: linux/amd64
+          PUSH: "true"
+          REGISTRY: registry.dev.siderolabs.io
+        run: |
+          make iscsi-tools util-linux-tools extensions-metadata -C _out/extensions
+      - name: installer extensions
+        env:
+          EXTENSIONS_FILTER_COMMAND: grep -E 'iscsi-tools|util-linux-tools'
           IMAGE_REGISTRY: registry.dev.siderolabs.io
-          QEMU_CPUS_WORKERS: "4"
-          QEMU_EXTRA_DISKS: "1"
-          QEMU_EXTRA_DISKS_SIZE: "12288"
-          QEMU_MEMORY_WORKERS: "5120"
+        run: |
+          make installer-with-extensions
+      - name: e2e-qemu-csi-longhorn
+        env:
+          EXTRA_TEST_ARGS: -talos.csi=longhorn
+          IMAGE_REGISTRY: registry.dev.siderolabs.io
           QEMU_WORKERS: "3"
           SHORT_INTEGRATION_TEST: "yes"
-          WITH_TEST: run_csi_tests
+          WITH_CONFIG_PATCH: '@_out/installer-extensions-patch.yaml:@hack/test/patches/longhorn.yaml'
         run: |
           sudo -E make e2e-qemu
       - name: save artifacts
         if: always()
         uses: actions/upload-artifact@v4
         with:
-          name: talos-logs-integration-qemu-csi
+          name: talos-logs-integration-qemu-csi-longhorn
           path: |-
             ~/.talos/clusters/**/*.log
             !~/.talos/clusters/**/swtpm.log
