--- a/.kres.yaml
+++ b/.kres.yaml
@@ -67,7 +67,8 @@ spec:
     - integration-conformance
     - integration-qemu-encrypted-vip
     - integration-qemu-race
-    - integration-qemu-csi
+    - integration-qemu-csi-rook-ceph
+    - integration-qemu-csi-longhorn
     - integration-images
     - integration-reproducibility-test
     - integration-cloud-images
@@ -767,7 +768,7 @@ spec:
           environment:
             SHORT_INTEGRATION_TEST: yes
             WITH_UEFI: false
-            WITH_CONFIG_PATCH: '[{"op": "add", "path": "/machine/install/extraKernelArgs/-", "value": "talos.unified_cgroup_hierarchy=0"}]' #use cgroupsv1
+            WITH_CONFIG_PATCH: "@hack/test/patches/cgroupsv1.yaml" #use cgroupsv1
             IMAGE_REGISTRY: registry.dev.siderolabs.io
         - name: e2e-disk-image
           command: e2e-qemu
@@ -965,7 +966,7 @@ spec:
           withSudo: true
           environment:
             QEMU_MEMORY_WORKERS: 4096
-            WITH_CONFIG_PATCH_WORKER: "@_out/extensions-patch.yaml"
+            WITH_CONFIG_PATCH_WORKER: "@_out/installer-extensions-patch.yaml:@hack/test/patches/extensions.yaml"
             QEMU_EXTRA_DISKS: 3
             SHORT_INTEGRATION_TEST: yes
             EXTRA_TEST_ARGS: -talos.extensions.qemu
@@ -1020,7 +1021,7 @@ spec:
             WITH_CUSTOM_CNI: cilium
             WITH_FIREWALL: accept
             QEMU_WORKERS: 2
-            WITH_CONFIG_PATCH: '[{"op": "add", "path": "/cluster/network", "value": {"cni": {"name": "none"}}}]'
+            WITH_CONFIG_PATCH: "@hack/test/patches/cilium-no-kubeproxy.yaml"
             IMAGE_REGISTRY: registry.dev.siderolabs.io
         - name: e2e-cilium-strict
           command: e2e-qemu
@@ -1032,7 +1033,7 @@ spec:
             WITH_FIREWALL: accept
             QEMU_WORKERS: 2
             CILIUM_INSTALL_TYPE: strict
-            WITH_CONFIG_PATCH: '[{"op": "add", "path": "/cluster/network", "value": {"cni": {"name": "none"}}}, {"op": "add", "path": "/cluster/proxy", "value": {"disabled": true}}]'
+            WITH_CONFIG_PATCH: "@hack/test/patches/cilium-kubeproxy.yaml"
             IMAGE_REGISTRY: registry.dev.siderolabs.io
         - name: e2e-cilium-strict-kubespan
           command: e2e-qemu
@@ -1045,7 +1046,7 @@ spec:
             WITH_KUBESPAN: true
             QEMU_WORKERS: 2
             CILIUM_INSTALL_TYPE: strict
-            WITH_CONFIG_PATCH: '[{"op": "add", "path": "/cluster/network", "value": {"cni": {"name": "none"}}}, {"op": "add", "path": "/cluster/proxy", "value": {"disabled": true}}]'
+            WITH_CONFIG_PATCH: "@hack/test/patches/cilium-kubeproxy.yaml"
             IMAGE_REGISTRY: registry.dev.siderolabs.io
         - name: save-talos-logs
           conditions:
@@ -1160,7 +1161,7 @@ spec:
             artifactPath: ~/.talos/clusters/**/*.log
             additionalArtifacts:
               - "!~/.talos/clusters/**/swtpm.log"
-    - name: integration-qemu-csi
+    - name: integration-qemu-csi-rook-ceph
       buildxOptions:
         enabled: true
       depends:
@@ -1172,6 +1173,7 @@ spec:
         - '30 3 * * *'
       triggerLabels:
         - integration/qemu-csi
+        - integration/qemu-csi-rook-ceph
       steps:
         - name: download-artifacts
           conditions:
@@ -1191,7 +1193,7 @@ spec:
         - name: talosctl-cni-bundle
           conditions:
             - only-on-schedule
-        - name: e2e-qemu-csi
+        - name: e2e-qemu-csi-rook-ceph
           command: e2e-qemu
           withSudo: true
           environment:
@@ -1201,14 +1203,88 @@ spec:
             QEMU_MEMORY_WORKERS: 5120
             QEMU_EXTRA_DISKS: 1
             QEMU_EXTRA_DISKS_SIZE: 12288
-            WITH_TEST: run_csi_tests
+            WITH_CONFIG_PATCH: "@hack/test/patches/rook-ceph.yaml"
+            EXTRA_TEST_ARGS: -talos.csi=rook-ceph
             IMAGE_REGISTRY: registry.dev.siderolabs.io
         - name: save-talos-logs
           conditions:
             - always
           artifactStep:
             type: upload
-            artifactName: talos-logs-integration-qemu-csi
+            artifactName: talos-logs-integration-qemu-csi-rook-ceph
+            disableExecutableListGeneration: true
+            artifactPath: ~/.talos/clusters/**/*.log
+            additionalArtifacts:
+              - "!~/.talos/clusters/**/swtpm.log"
+    - name: integration-qemu-csi-longhorn
+      buildxOptions:
+        enabled: true
+      depends:
+        - default
+      runners:
+        - self-hosted
+        - talos
+      crons:
+        - '30 3 * * *'
+      triggerLabels:
+        - integration/qemu-csi
+        - integration/qemu-csi-longhorn
+      steps:
+        - name: download-artifacts
+          conditions:
+            - not-on-schedule
+          artifactStep:
+            type: download
+            artifactName: talos-artifacts
+            artifactPath: _out
+        - name: build
+          conditions:
+            - only-on-schedule
+          command: talosctl-linux-amd64 kernel sd-boot sd-stub initramfs installer imager talos _out/integration-test-linux-amd64
+          environment:
+            PLATFORM: linux/amd64
+            IMAGE_REGISTRY: registry.dev.siderolabs.io
+            PUSH: true
+        - name: talosctl-cni-bundle
+          conditions:
+            - only-on-schedule
+        - name: checkout extensions
+          checkoutStep:
+            repository: siderolabs/extensions
+            ref: main
+            path: _out/extensions
+        - name: set variables
+          nonMakeStep: true
+          command: cat _out/talos-metadata >> "$GITHUB_ENV"
+        - name: build extensions
+          command: iscsi-tools util-linux-tools extensions-metadata
+          arguments:
+            - -C
+            - _out/extensions
+          environment:
+            PLATFORM: linux/amd64
+            PUSH: true
+            REGISTRY: registry.dev.siderolabs.io
+        - name: installer extensions
+          command: installer-with-extensions
+          environment:
+            EXTENSIONS_FILTER_COMMAND: "grep -E 'iscsi-tools|util-linux-tools'"
+            IMAGE_REGISTRY: registry.dev.siderolabs.io
+        - name: e2e-qemu-csi-longhorn
+          command: e2e-qemu
+          withSudo: true
+          environment:
+            SHORT_INTEGRATION_TEST: yes
+            QEMU_WORKERS: 3
+            WITH_CONFIG_PATCH: "@_out/installer-extensions-patch.yaml:@hack/test/patches/longhorn.yaml"
+            EXTRA_TEST_ARGS: -talos.csi=longhorn
+            IMAGE_REGISTRY: registry.dev.siderolabs.io
+        - name: save-talos-logs
+          conditions:
+            - always
+          artifactStep:
+            type: upload
+            artifactName: talos-logs-integration-qemu-csi-longhorn
             disableExecutableListGeneration: true
             artifactPath: ~/.talos/clusters/**/*.log
             additionalArtifacts:
