fix(ci): fix broken tests
Fix the extensions test broken by #9135.
Also fix the cs-longhorn cron test.

Signed-off-by: Noel Georgi <git@frezbo.dev>

--- a/.kres.yaml
+++ b/.kres.yaml
@@ -1237,6 +1237,9 @@ spec:
             type: download
             artifactName: talos-artifacts
             artifactPath: _out
+        - name: generate
+          conditions:
+            - only-on-schedule
         - name: build
           conditions:
             - only-on-schedule
