--- a/.github/workflows/slack-notify.yaml
+++ b/.github/workflows/slack-notify.yaml
@@ -1,6 +1,6 @@
 # THIS FILE WAS AUTOMATICALLY GENERATED, PLEASE DO NOT EDIT.
 #
-# Generated on 2024-08-24T17:38:15Z by kres 8e4bbb4.
+# Generated on 2024-09-05T16:23:55Z by kres b5ca957.
 
 name: slack-notify
 "on":
@@ -32,6 +32,7 @@ name: slack-notify
       - integration-aws-nvidia-oss-cron
       - integration-aws-nvidia-nonfree-cron
       - integration-azure-cron
+      - integration-gcp-cron
       - integration-equinix-metal-cron
     types:
       - completed
