--- a/.kres.yaml
+++ b/.kres.yaml
@@ -77,6 +77,7 @@ spec:
     - integration-aws-nvidia-oss
     - integration-aws-nvidia-nonfree
     - integration-azure
+    - integration-gcp
     - integration-equinix-metal
 ---
 kind: common.GHWorkflow
@@ -1861,6 +1862,72 @@ spec:
             ARM_CLIENT_ID: ${{ env.AZURE_CLIENT_ID }}
             ARM_CLIENT_SECRET: ${{ env.AZURE_CLIENT_SECRET }}
             ARM_TENANT_ID: ${{ env.AZURE_TENANT_ID }}
+    - name: integration-gcp
+      buildxOptions:
+        enabled: true
+      sops: true
+      depends:
+        - default
+      runners:
+        - self-hosted
+        - generic # we can use generic here since the tests run against a remote talos cluster
+      crons:
+        - '30 7 * * *'
+      triggerLabels:
+        - integration/gcp
+      steps:
+        - name: download-artifacts
+          conditions:
+            - not-on-schedule
+          artifactStep:
+            type: download
+            artifactName: talos-artifacts
+            artifactPath: _out
+        - name: uki-certs
+          conditions:
+            - only-on-schedule
+          environment:
+            PLATFORM: linux/amd64
+        - name: build
+          conditions:
+            - only-on-schedule
+          command: talosctl-linux-amd64 kernel sd-boot sd-stub initramfs installer imager talos _out/integration-test-linux-amd64
+          environment:
+            PLATFORM: linux/amd64
+            IMAGE_REGISTRY: registry.dev.siderolabs.io
+            PUSH: true
+        - name: talosctl-cni-bundle
+          conditions:
+            - only-on-schedule
+        - name: images-essential
+          conditions:
+            - only-on-schedule
+          environment:
+            PLATFORM: linux/amd64
+            IMAGE_REGISTRY: registry.dev.siderolabs.io
+        - name: e2e-gcp-prepare
+        - name: checkout contrib
+          checkoutStep:
+            repository: siderolabs/contrib
+            ref: main
+            path: _out/contrib
+        - name: setup tf
+          terraformStep: true
+        - name: tf apply
+          command: e2e-cloud-tf
+          environment:
+            TF_SCRIPT_DIR: _out/contrib
+            TF_E2E_TEST_TYPE: gcp
+            TF_E2E_ACTION: apply
+        - name: e2e-gcp
+        - name: tf destroy
+          command: e2e-cloud-tf
+          conditions:
+            - always
+          environment:
+            TF_SCRIPT_DIR: _out/contrib
+            TF_E2E_TEST_TYPE: gcp
+            TF_E2E_ACTION: destroy
     - name: integration-equinix-metal
       buildxOptions:
         enabled: true
