--- a/.github/workflows/integration-aws-nvidia-oss-cron.yaml
+++ b/.github/workflows/integration-aws-nvidia-oss-cron.yaml
@@ -1,6 +1,6 @@
 # THIS FILE WAS AUTOMATICALLY GENERATED, PLEASE DO NOT EDIT.
 #
-# Generated on 2024-09-05T17:53:07Z by kres 8be5fa7.
+# Generated on 2024-09-09T12:40:13Z by kres 8be5fa7.
 
 name: integration-aws-nvidia-oss-cron
 concurrency:
@@ -68,6 +68,10 @@ jobs:
         if: github.event_name != 'schedule'
         run: |
           xargs -a _out/executable-artifacts -I {} chmod +x {}
+      - name: ci-temp-release-tag
+        if: github.event_name != 'schedule'
+        run: |
+          make ci-temp-release-tag
       - name: generate
         if: github.event_name == 'schedule'
         run: |
